--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/GenisDiaz/react-gallery/issues"
   },
-  "homepage": "https://github.com/GenisDiaz/react-gallery#readme"
+  "homepage": "https://github.com/GenisDiaz/react-gallery#readme",
+  "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.23.0"
+  }
 }
