--- a/package.json
+++ b/package.json
@@ -36,11 +36,15 @@
     "css-loader": "^0.26.1",
     "eslint": "^3.16.0",
     "file-loader": "^0.10.0",
+    "mocha": "^3.2.0",
     "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-router": "^2.4.0",
+    "react-router-redux": "^4.0.4",
+    "react-transform-catch-errors": "^1.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
