-add config file to gitignore

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "api_key": "Here your api_key",
-  "user_id": "Here user id who want you see its photos"
+  "api_key": "a3aaff05f8fbe045216b9a991affd3ad",
+  "user_id": "54694930@N05"
 }
