--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-redux": "^4.0.4",
     "react-transform-catch-errors": "^1.0.2",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
