--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-dev-server": "^2.4.1"
   },
   "devDependencies": {
-    "concurrently": "^3.3.0"
+    "concurrently": "^3.3.0",
+    "extract-text-webpack-plugin": "^2.0.0"
   }
 }
