--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-fontawesome": "^1.5.0",
     "react-redux": "^5.0.2",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
