--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "React gallery + webpack + babel + test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
+    "test:coverage": "jest --coverage",
     "start": "webpack-dev-server",
     "prod": "cross-env NODE_ENV=production webpack-dev-server --env.prod=true",
     "build": "cross-env NODE_ENV=production webpack --env.prod=true",
@@ -36,7 +38,6 @@
     "css-loader": "^0.26.1",
     "eslint": "^3.16.0",
     "file-loader": "^0.10.0",
-    "mocha": "^3.2.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -52,7 +53,10 @@
     "webpack-dev-server": "^2.4.1"
   },
   "devDependencies": {
-    "concurrently": "^3.3.0",
-    "extract-text-webpack-plugin": "^2.0.0"
+    "babel-jest": "^19.0.0",
+    "jest": "^19.0.2",
+    "jest-fetch-mock": "^1.0.8",
+    "nock": "^9.0.8",
+    "redux-mock-store": "^1.2.2"
   }
 }
