--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "React gallery + webpack + babel + test",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "npm test -- --watch",
-    "test:coverage": "jest --coverage",
     "start": "webpack-dev-server",
     "prod": "cross-env NODE_ENV=production webpack-dev-server --env.prod=true",
     "build": "cross-env NODE_ENV=production webpack --env.prod=true",
